Update page title to remove "Editable" suffix

--- a/29v3.html
+++ b/29v3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>The Federation - Wiki (Editable)</title>
+<title>The Federation - Wiki</title>
 
 <!-- Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Rajdhani:wght@400;700&display=swap" rel="stylesheet">
